ppgtt/i915: memory address masks

Gen8+ ppgtt uses 48-bit addresses.
Kernel driver uses masks to manipulate with addresses.
Masks are UL-types. On 64-bit system UL is 64 bits,
on 32-bit system - 32.
So on 32-bit systems 48-bit adresses goes to be cut to 32 bits.

CC: Kenneth Graunke <kenneth@whitecape.org>
CC: Chris Wilson <chris@chris-wilson.co.uk>
CC: Lionel G Landwerlin <lionel.g.landwerlin@intel.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=108282
Fixes: a363bb2cd0e2 (i965: Allocate VMA in userspace for full-PPGTT systems.)
Signed-off-by: Sergii Romantsov <sergii.romantsov@globallogic.com>